--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 langage: 'php'
 php: '7.2.9' 
 
-before install: false
+before install: true
 
-install: false
+install: true
 
-before script : false
+before script : true
 
-script: false
+script: true
 
-
+after script: true
