--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 langage: 'php'
 php: '7.3' 
 
+cache: 
+    directories:
+        -$HOME/.composer/cache
 before install: true
 
 install: 
@@ -10,5 +13,6 @@ before script : true
 
 script: 
   - phpunit tests
+  - .vendor/bin/php-cs-fixer fix —dry-run 
 
 after script: true
