--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ php: '7.3'
 
 cache: 
     directories:
-        -$HOME/.composer/cache
+        - $HOME/.composer/cache
 before install: true
 
 install: 
@@ -13,6 +13,6 @@ before script : true
 
 script: 
   - phpunit tests
-  - .vendor/bin/php-cs-fixer fix —dry-run 
+  - .vendor/bin/php-cs-fixer fix —dry-run -diff --verbose
 
 after script: true
