--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
 before script : true
 
 script: 
+  - .vendor/bin/php-cs-fixer fix —dry-run --diff --verbose
   - phpunit tests
-  - .vendor/bin/php-cs-fixer fix —dry-run -diff --verbose
 
 after script: true
