--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,8 @@ script:
   - phpunit tests
 
 after script: true
+
+deploy:
+  provider: heroku
+  api_key:
+    secure: encrypt $(heroku auth:token)
