--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,18 +1,13 @@
-image : "php:7.3"
-before script: 
-echo « installation »
-Stage: 
-etape 1
-etape 2 
+image: docker
+services: 
+  - docker: dind
 
-etape1_command1:
-stage: etape1
-script: echo « command 1 » 
+  before script:
+    - docker run composer -v $PWD:/app install
 
-etape1_command2:
-stage: etape2
-script: echo « command 2 » 
+stage:
+  - test
 
-etape2_command1:
-stage: etape2
-script: echo « command 1 » 
+mon_script_test: 
+stage: test
+script: docker run -v $PWD:/app -w /app php:7.3-cli  ./vendor/bin/php-cs-fixer fix --dry-run --diff --verbose
