--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before script : true
 
 script: 
  # - "./vendor/bin/php-cs-fixer fix --dry-run --diff --verbose"
-  - docker run -v $PWD:/app -w /app php:7.3-cli  ./vendor/bin/php-cs-fixer fix --dry-run --diff --verbose
+  - docker run -v $PWD:/app -w /app php:7.3-cli  "./vendor/bin/php-cs-fixer fix --dry-run --diff --verbose"
   - phpunit tests
 
 after script: true
