--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,26 @@
-langage: 'php'
-php: '7.3' 
+language : php
+php :
+  - '7.3'
 
-cache: 
-    directories:
-        - "$HOME/.composer/cache"
-before install: true
+cache:
+  directories:
+    - $HOME/.composer/cache
 
-install: 
-- composer install
+before_install: true
 
-before script : true
+install :
+  - composer install
 
-script: 
- # - "./vendor/bin/php-cs-fixer fix --dry-run --diff --verbose"
-  - docker run -v $PWD:/app -w /app php:7.3-cli  "./vendor/bin/php-cs-fixer fix --dry-run --diff --verbose"
-  - phpunit tests
+before_script: true
 
-after script: true
+script:
+  - ./vendor/bin/php-cs-fixer fix --dry-run --diff
+  - docker run -v $(pwd):/app --rm phpunit/phpunit run tests
+
+after_script: true
+
+
+deploy:
+  provider: heroku
+  api_key:
 
